Fixed alignment of contact icons

--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -198,7 +198,7 @@ dl {
 }
 
 ul.icons {
-  margin-left: 35%;
+  margin-left: 30%;
 }
 
 .fa-linkedin {
